--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 html, body {
     height: 100%;
     background-color: #000;  /* Black background */
-    color: #0f0;  /* Green text color */
-    font-family: monospace;
+    color: #00f;  /* Neon Blue text color */
+    font-family: 'Courier New', Courier, monospace;
     overflow: hidden;
 }
 
@@ -28,9 +28,10 @@ html, body {
     position: absolute;
     top: -100px;  /* Start above the screen */
     left: 0;
-    font-size: 16px;
+    font-size: 18px;
     opacity: 0.8;
-    color: #0f0;
+    color: #00f;  /* Neon Blue */
     white-space: nowrap;
-    line-height: 20px;
+    line-height: 18px;
+    text-align: center;
 }
